--- a/mysql/大数据表快速导出导入.md
+++ b/mysql/大数据表快速导出导入.md
@@ -7,4 +7,4 @@
 * 压缩sql文件
 * 传到目标服务器 我是使用了scp
 * 登录目标服务器解压sql压缩包
-* 导入sql文件 mysql -uuser -ppwd db <bak.sql
+* 通过source命令导入 命令格式：source "路径名"+/mytest_emp_dept.sql
