--- a/mysql/大数据表快速导出导入.md
+++ b/mysql/大数据表快速导出导入.md
@@ -8,3 +8,9 @@
 * 传到目标服务器 我是使用了scp
 * 登录目标服务器解压sql压缩包
 * 通过source命令导入 命令格式：source "路径名"+/mytest_emp_dept.sql
+
+C:\Users\111>mysql -u root -p
+
+mysql>use mydb;
+mysql>set names utf8;#根据情况，要保证编码一致
+mysql>source D:/dataFile/back.sql;#注意这是左斜杠
